<resources>
    <string name="app_name">Dream Team</string>
    <string name="title_login">Login</string>
    <string name="client_id">641791408552-motosudvg7i410l406s2tual8leqg4ni.apps.googleusercontent.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_friends">Friends</string>
    <string name="facebook_app_id">203645610719018</string>
    <string name="fb_login_protocol_scheme">fb203645610719018</string>
    <string name="quote_format">%s</string>
    <string name="delete_match_button">Delete Match</string>
    <string name="public_match_button">Make Public</string>
    <string name="private_match_button">Make Private</string>
    <string name="invite_button_text">Invite Friends</string>
    <string name="match_cost">Price:</string>
    <string name="match_number_players">Players:</string>
    <string name="title_activity_maps">Map</string>
    <string name="format_email">%s</string>
    <string name="format_phone">%s</string>
    <string name="format_rating">%s</string>
    <string name="format_role">%s</string>
    <string name="format_info">%s</string>
    <string name="search_hint">Search by name...</string>
    <string name="chat_hint">Start group chat</string>
    <string name="google_maps_api_key">google_maps_api_key</string>
    <string name="search_no_result">No result. Try Again!</string>
    <string name="no_friends">You have no friends :( Add new ones by looking them up through the icon on the top-right of the screen!</string>
    <string name="no_requests">You have no new requests.</string>
    <string name="account_edit">Edit</string>
    <string name="account_friend">Friend</string>
    <string name="account_sent_request">Request sent</string>
    <string name="account_accept">Accept</string>
    <string name="account_add">Add friend</string>
    <string name="account_remove">Remove</string>
    <string name="account_reject">Reject</string>
    <string name="match_no_matches">No new match found.</string>
    <string name="match_no_result">No matches were found with this title.</string>
    <string name="notifications_no_notifications">You have no new notification.</string>
    <string name="channel_ID">notificationsChannel</string>
    <string name="channel_name">Notifications</string>
    <string name="match_show_requests">Show Requests</string>
    <string name="match_show_participants">Show Players</string>
    <string name="match_is_participant">Player</string>
    <string name="match_accept">Join</string>
    <string name="match_deny">Deny</string>
    <string name="match_request_sent">Request Sent</string>
    <string name="match_request_participation">Join Request</string>
    <string name="match_archive">Archive Match</string>
    <string name="match_leave">Leave Match</string>
    <string name="match_full">Full</string>
    <string name="match_add_friend">Add</string>
    <string name="match_expel_participant">Expel</string>
    <string name="match_friend_already_invited">Invited</string>
    <string name="match_confirmed">Confirmed</string>
    <string name ="match_cancelled">Cancelled</string>
    <string name="error_match">We are sorry! The match you requested is nowhere to be found. :(</string>
    <string name="cancel_match_button">Cancel Match</string>
    <string name="places_api_key">places_api_key</string>
    <string name="error_api_key">No API key defined in Strings</string>
    <string name="match_place_title">Match Location:</string>
    <string name="match_location_description">Enter the address where the match will take place.</string>
    <string name="selected_address">Selected address:</string>
    <string name="match_place_placeholder">No match address selected yet!</string>
    <string name="public_match_title">Public Match:</string>
</resources>
